# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: __init__.py  brain_engine.py  brain_start.py  cli.py
brain_games/games/: calc.py  even.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progresssion.py  gcd.py  prime.py  progresssion.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
