[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games: collection of math games"
authors = ["KirEz022 <93149806+KirEz022@users.noreply.github.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"
repository = 'https://github.com/kirill-ezhov/python-project-49'
classifiers = [
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Games",
    "Environment :: Console",
]




[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
